--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,32 @@
+@font-face {
+  font-family: "PTSans";
+  src: url("fonts/PTSansRegular.woff2") format("woff2"),
+    url("fonts/PTSansRegular.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "PTSans";
+  src: url("fonts/PTSansItalic.woff2") format("woff2"),
+    url("fonts/PTSansItalic.woff") format("woff");
+  font-weight: normal;
+  font-style: italic;
+}
+@font-face {
+  font-family: "PTSans";
+  src: url("fonts/PTSansBold.woff2") format("woff2"),
+    url("fonts/PTSansBold.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+}
+@font-face {
+  font-family: "PTSans";
+  src: url("fonts/PTSansBoldItalic.woff2") format("woff2"),
+    url("fonts/PTSansBoldItalic.woff") format("woff");
+  font-weight: bold;
+  font-style: italic;
+}
+
 /* RESETTING BROWSER STYLES */
 html,
 body,
@@ -83,7 +112,7 @@ video {
   padding: 0;
   border: 0;
   font-size: 100%;
-  font: inherit;
+  /* font: inherit; */
   vertical-align: baseline;
 }
 article,
@@ -335,14 +364,14 @@ summary {
 
 /* basic layout -- 2 columns */
 
-body {
+/* body {
   color: #b1967c;
   font-family: "Palatino Linotype", Baskerville, serif;
   padding-top: 115px;
-  background: #cde6ff url(images/bg_body.png) repeat-x;
+  background: #cde6ff url(images/white_garden_banner.png) repeat-x;
   max-width: 800px;
   margin: 0 auto;
-}
+} */
 h1 {
   font-size: 3em;
   font-family: "Arial Black", Arial, sans-serif;
@@ -366,11 +395,25 @@ h2 {
   padding: 15px;
   background: #e9f5fe;
 }
+.main h1 {
+  color: rgb(249, 212, 120);
+  font-family: "Arial Black", Arial, Helvetica, sans-serif;
+  font-size: 4em;
+  text-shadow: 4px 4px 6px rgba(0, 0, 0, 0.75);
+}
 .main h2 {
   color: #e8a064;
   border-bottom: 2px white solid;
   background: url(images/bullet_flower.png) no-repeat;
   padding: 0 0 2px 80px;
+}
+.main h3 {
+  color: rgb(241, 47, 6);
+  font-size: 1.9em;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-top: 25px;
+  margin-bottom: 10px;
 }
 .main p {
   color: #616161;
@@ -379,6 +422,31 @@ h2 {
   line-height: 150%;
   margin-bottom: 10px;
   margin-left: 80px;
+}
+.main ul {
+  margin: 50px 0 25px 50px;
+  width: 25%;
+  float: right;
+}
+.main li {
+  color: rgb(32, 126, 191);
+  font-size: 1.5em;
+  margin-bottom: 7px;
+}
+.main .byline {
+  font-size: 1.6em;
+  margin: 5px 0 25px 50px;
+}
+.main .byline strong {
+  color: rgb(32, 126, 191);
+  text-transform: uppercase;
+  margin-left: 11px;
+}
+.main h1 strong {
+  font-size: 150px;
+  color: white;
+  line-height: 1;
+  margin-right: -0.5em;
 }
 p.intro {
   color: #6a94cc;
@@ -418,4 +486,10 @@ p.intro {
 }
 .percentage div {
   font-size: 200%;
+}
+p.intro::first-letter {
+  font-weight: bold;
+  color: red;
+  background-color: black;
+  padding: 10px;
 }
